--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 /*--light background--*/
-html {background-image: url(https://github.com/cocomon2019/Portfolio-Project/blob/main/images/profile2); 
+html {background-image: url(https://cocomon2019.github.io/Portfolio-Project/images/Profile2); 
   background-size: 45%; 
   height: 600px; 
   background-blend-mode: lighten;}
